# classic_GA

./: CMakeLists.txt  ga.cpp  ga.h  main.cpp  objective_functions.cpp
